test: valida totais com tributos e frete