@@ -1,90 +1,144 @@
 package br.com.itau.geradornotafiscal;
 
-import br.com.itau.geradornotafiscal.model.*;
-import br.com.itau.geradornotafiscal.service.CalculadoraAliquotaProduto;
+import br.com.itau.geradornotafiscal.model.Destinatario;
+import br.com.itau.geradornotafiscal.model.Endereco;
+import br.com.itau.geradornotafiscal.model.Finalidade;
+import br.com.itau.geradornotafiscal.model.Item;
+import br.com.itau.geradornotafiscal.model.NotaFiscal;
+import br.com.itau.geradornotafiscal.model.Pedido;
+import br.com.itau.geradornotafiscal.model.Regiao;
+import br.com.itau.geradornotafiscal.model.RegimeTributacaoPJ;
+import br.com.itau.geradornotafiscal.model.TipoPessoa;
 import br.com.itau.geradornotafiscal.service.impl.GeradorNotaFiscalServiceImpl;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class GeradorNotaFiscalServiceImplTest {
+class GeradorNotaFiscalServiceImplTest {
 
-    @InjectMocks
-    private GeradorNotaFiscalServiceImpl geradorNotaFiscalService;
+    private final GeradorNotaFiscalServiceImpl geradorNotaFiscalService = new GeradorNotaFiscalServiceImpl();
 
-    @Mock
-    private CalculadoraAliquotaProduto calculadoraAliquotaProduto;
-
-    @BeforeEach
-    public void setup() {
-        MockitoAnnotations.openMocks(this);
-    }
-
-
-
-    @Test
-    public void shouldGenerateNotaFiscalForTipoPessoaFisicaWithValorTotalItensLessThan500() {
-        Pedido pedido = new Pedido();
-        pedido.setValorTotalItens(400);
-        pedido.setValorFrete(100);
-        Destinatario destinatario = new Destinatario();
-        destinatario.setTipoPessoa(TipoPessoa.FISICA);
-
-        // Create and add Endereco to the Destinatario
-        Endereco endereco = new Endereco();
-        endereco.setFinalidade(Finalidade.ENTREGA);
-        endereco.setRegiao(Regiao.SUDESTE);
-        destinatario.setEnderecos(Arrays.asList(endereco));
-
-        pedido.setDestinatario(destinatario);
-
-        // Create and add items to the Pedido
-        Item item = new Item();
-        item.setValorUnitario(100);
-        item.setQuantidade(4);
-        pedido.setItens(Arrays.asList(item));
+    @ParameterizedTest(name = "pessoa fisica: pedido de {0} gera tributo {1} e total {2}")
+    @MethodSource("cenariosPessoaFisica")
+    void deveCalcularValoresEsperadosParaCadaFaixaDePessoaFisica(
+            double valorTotalItens, double tributoEsperado, double totalNotaEsperado) {
+        Pedido pedido = pedido(TipoPessoa.FISICA, null, valorTotalItens, List.of(item(valorTotalItens, 1)), Regiao.SUDESTE);
 
         NotaFiscal notaFiscal = geradorNotaFiscalService.gerarNotaFiscal(pedido);
 
-        assertEquals(pedido.getValorTotalItens(), notaFiscal.getValorTotalItens());
-        assertEquals(1, notaFiscal.getItens().size());
-        assertEquals(0, notaFiscal.getItens().get(0).getValorTributoItem());
+        assertEquals(tributoEsperado, notaFiscal.getItens().getFirst().getValorTributoItem(), 0.001);
+        assertEquals(totalNotaEsperado, notaFiscal.getValorTotalItens(), 0.001);
     }
 
-    @Test
-    public void shouldGenerateNotaFiscalForTipoPessoaJuridicaWithRegimeTributacaoLucroPresumidoAndValorTotalItensGreaterThan5000() {
-        Pedido pedido = new Pedido();
-        pedido.setValorTotalItens(6000);
-        pedido.setValorFrete(100);
-        Destinatario destinatario = new Destinatario();
-        destinatario.setTipoPessoa(TipoPessoa.JURIDICA);
-        destinatario.setRegimeTributacao(RegimeTributacaoPJ.LUCRO_PRESUMIDO);
-
-        // Create and add Endereco to the Destinatario
-        Endereco endereco = new Endereco();
-        endereco.setFinalidade(Finalidade.ENTREGA);
-        endereco.setRegiao(Regiao.SUDESTE);
-        destinatario.setEnderecos(Arrays.asList(endereco));
-
-        pedido.setDestinatario(destinatario);
-
-        // Create and add items to the Pedido
-        Item item = new Item();
-        item.setValorUnitario(1000);
-        item.setQuantidade(6);
-        pedido.setItens(Arrays.asList(item));
+    @ParameterizedTest(name = "{0}: pedido de {1} gera tributo {2} e total {3}")
+    @MethodSource("cenariosPessoaJuridica")
+    void deveCalcularValoresEsperadosParaCadaFaixaERegimeDePessoaJuridica(
+            RegimeTributacaoPJ regime, double valorTotalItens, double tributoEsperado, double totalNotaEsperado) {
+        Pedido pedido = pedido(TipoPessoa.JURIDICA, regime, valorTotalItens, List.of(item(valorTotalItens, 1)), Regiao.SUDESTE);
 
         NotaFiscal notaFiscal = geradorNotaFiscalService.gerarNotaFiscal(pedido);
 
-        assertEquals(pedido.getValorTotalItens(), notaFiscal.getValorTotalItens());
-        assertEquals(1, notaFiscal.getItens().size());
-        assertEquals(0.20 * item.getValorUnitario(), notaFiscal.getItens().get(0).getValorTributoItem());
+        assertEquals(tributoEsperado, notaFiscal.getItens().getFirst().getValorTributoItem(), 0.001);
+        assertEquals(totalNotaEsperado, notaFiscal.getValorTotalItens(), 0.001);
     }
 
+    @Test
+    void deveSomarValorDosProdutosComTributosConsiderandoAQuantidadeDeCadaItem() {
+        Pedido pedido = pedido(
+                TipoPessoa.FISICA,
+                null,
+                700,
+                List.of(item(100, 3), item(200, 2)),
+                Regiao.SUDESTE);
+
+        NotaFiscal notaFiscal = geradorNotaFiscalService.gerarNotaFiscal(pedido);
+
+        // (3 x (100 + 12)) + (2 x (200 + 24))
+        assertEquals(784, notaFiscal.getValorTotalItens(), 0.001);
+        assertEquals(12, notaFiscal.getItens().get(0).getValorTributoItem(), 0.001);
+        assertEquals(24, notaFiscal.getItens().get(1).getValorTributoItem(), 0.001);
+    }
+
+    @ParameterizedTest(name = "frete base de 100 para {0} resulta em {1}")
+    @MethodSource("cenariosFrete")
+    void deveCalcularValorFinalEsperadoDoFreteParaCadaRegiao(Regiao regiao, double valorFreteEsperado) {
+        Pedido pedido = pedido(TipoPessoa.FISICA, null, 100, List.of(item(100, 1)), regiao);
+        pedido.setValorFrete(100);
+
+        NotaFiscal notaFiscal = geradorNotaFiscalService.gerarNotaFiscal(pedido);
+
+        assertEquals(valorFreteEsperado, notaFiscal.getValorFrete(), 0.001);
+    }
+
+    private static Stream<Arguments> cenariosPessoaFisica() {
+        return Stream.of(
+                Arguments.of(400d, 0d, 400d),
+                Arguments.of(500d, 60d, 560d),
+                Arguments.of(2_000d, 240d, 2_240d),
+                Arguments.of(2_001d, 300.15d, 2_301.15d),
+                Arguments.of(3_500d, 525d, 4_025d),
+                Arguments.of(3_501d, 595.17d, 4_096.17d));
+    }
+
+    private static Stream<Arguments> cenariosPessoaJuridica() {
+        return Stream.of(
+                Arguments.of(RegimeTributacaoPJ.SIMPLES_NACIONAL, 999d, 29.97d, 1_028.97d),
+                Arguments.of(RegimeTributacaoPJ.SIMPLES_NACIONAL, 1_000d, 70d, 1_070d),
+                Arguments.of(RegimeTributacaoPJ.SIMPLES_NACIONAL, 2_000d, 140d, 2_140d),
+                Arguments.of(RegimeTributacaoPJ.SIMPLES_NACIONAL, 2_001d, 260.13d, 2_261.13d),
+                Arguments.of(RegimeTributacaoPJ.SIMPLES_NACIONAL, 5_000d, 650d, 5_650d),
+                Arguments.of(RegimeTributacaoPJ.SIMPLES_NACIONAL, 5_001d, 950.19d, 5_951.19d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_REAL, 999d, 29.97d, 1_028.97d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_REAL, 1_000d, 90d, 1_090d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_REAL, 2_000d, 180d, 2_180d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_REAL, 2_001d, 300.15d, 2_301.15d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_REAL, 5_000d, 750d, 5_750d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_REAL, 5_001d, 1_000.20d, 6_001.20d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_PRESUMIDO, 999d, 29.97d, 1_028.97d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_PRESUMIDO, 1_000d, 90d, 1_090d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_PRESUMIDO, 2_000d, 180d, 2_180d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_PRESUMIDO, 2_001d, 320.16d, 2_321.16d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_PRESUMIDO, 5_000d, 800d, 5_800d),
+                Arguments.of(RegimeTributacaoPJ.LUCRO_PRESUMIDO, 5_001d, 1_000.20d, 6_001.20d));
+    }
+
+    private static Stream<Arguments> cenariosFrete() {
+        return Stream.of(
+                Arguments.of(Regiao.NORTE, 108d),
+                Arguments.of(Regiao.NORDESTE, 108.50d),
+                Arguments.of(Regiao.CENTRO_OESTE, 107d),
+                Arguments.of(Regiao.SUDESTE, 104.80d),
+                Arguments.of(Regiao.SUL, 106d));
+    }
+
+    private static Pedido pedido(TipoPessoa tipoPessoa, RegimeTributacaoPJ regime, double valorTotalItens,
+                                 List<Item> itens, Regiao regiao) {
+        Destinatario destinatario = new Destinatario();
+        destinatario.setTipoPessoa(tipoPessoa);
+        destinatario.setRegimeTributacao(regime);
+        destinatario.setEnderecos(List.of(Endereco.builder()
+                .finalidade(Finalidade.ENTREGA)
+                .regiao(regiao)
+                .build()));
+
+        Pedido pedido = new Pedido();
+        pedido.setValorTotalItens(valorTotalItens);
+        pedido.setValorFrete(0);
+        pedido.setItens(itens);
+        pedido.setDestinatario(destinatario);
+        return pedido;
+    }
+
+    private static Item item(double valorUnitario, int quantidade) {
+        Item item = new Item();
+        item.setValorUnitario(valorUnitario);
+        item.setQuantidade(quantidade);
+        return item;
+    }
 }
